--- a/project/home.html
+++ b/project/home.html
@@ -121,7 +121,7 @@
 							<div class="row gtr-50 gtr-uniform">
 								<div class="col-1"></div>
 								<div class="col-4">
-									<img src="/project/images/Logo.jpg" alt="" class="footer-img">
+									<img src="images/Logo.jpg" alt="" class="footer-img">
 								</div>
 								<div class="col-5 footer-text">
 									<p>Designed by Team 10</p> 
