--- a/project/contact.html
+++ b/project/contact.html
@@ -9,7 +9,7 @@
 		<title>Contact - Alpha by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/login.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -51,23 +51,17 @@
 					<div class="box">
 						<form method="post" action="#">
 							<div class="row gtr-50 gtr-uniform">
-								<div class="col-6 col-12-mobilep">
-									<input type="text" name="name" id="name" value="" placeholder="Name" />
-								</div>
-								<div class="col-6 col-12-mobilep">
-									<input type="email" name="email" id="email" value="" placeholder="Email" />
-								</div>
 								<div class="col-12">
-									<input type="text" name="subject" id="subject" value="" placeholder="Subject" />
-								</div>
+									<input type="text" name="Account" id="name" value="" placeholder="Account" />
+						        <br>
 								<div class="col-12">
-									<textarea name="message" id="message" placeholder="Enter your message" rows="6"></textarea>
+									<input type="text" name="Password" id="subject" value="" placeholder="Password" />
 								</div>
-								<div class="col-12">
-									<ul class="actions special">
-										<li><input type="submit" value="Send Message" /></li>
-									</ul>
-								</div>
+							</div>
+								<ul class="actions special">
+									<li><input type="submit" value="Login" /></li>
+								</ul>
+								
 							</div>
 						</form>
 					</div>
