--- a/project/searchorder.html
+++ b/project/searchorder.html
@@ -19,25 +19,15 @@
 					<h1><a href="index.html">Alpha</a> by HTML5 UP</h1>
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="administrator-home.html" style="font-family:Microsoft JhengHei;">首頁</a></li>
 							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
-								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
+								<a href="#" class="icon solid fa-angle-down" style="font-family:Microsoft JhengHei;">NAME</a>
+ 								<ul>
+									<li><a href="generic.html" style="font-family:Microsoft JhengHei;">會員資料</a></li>
+									<li><a href="searchorder.html" style="font-family:Microsoft JhengHei;">訂單編號</a></li>
 								</ul>
 							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
+							<li><a href="#" class="button" style="font-family:Microsoft JhengHei;">登出</a></li>
 						</ul>
 					</nav>
 				</header>
@@ -113,6 +103,7 @@
 
 				</section>
 			</footer>
+
 
 		</div>
 
