--- a/project/contact.html
+++ b/project/contact.html
@@ -9,7 +9,7 @@
 		<title>Contact - Alpha by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/login.css" />
+		<link rel="stylesheet" href="assets/css/register.css" />
 	</head>
 	<body class="is-preload">
 		<div id="page-wrapper">
@@ -51,18 +51,84 @@
 					<div class="box">
 						<form method="post" action="#">
 							<div class="row gtr-50 gtr-uniform">
-								<div class="col-12">
-									<input type="text" name="Account" id="name" value="" placeholder="Account" />
+										<div class="col-2">
+
+										</div>
+										<div class="col-1" style="align-self:center">
+											<p>帳號</p> 
+										</div>
+										<div class="col-5">
+											<input type="text" name="Account" id="name" value="" />
+										</div>
+                                        <div class="col-4">
+
+										</div>
+								<br>
+								<div class="col-2">
+
+								</div>
+								<div class="col-1" style="align-self:center">
+									<p>密碼</p> 
+								</div>
+								<div class="col-5">
+									<input type="text" name="Account" id="name" value="" />
+								</div>
+								<div class="col-4">
+
+								</div>
 						        <br>
-								<div class="col-12">
-									<input type="text" name="Password" id="subject" value="" placeholder="Password" />
+                                <div class="col-2">
+
+								</div>
+								<div class="col-1" style="align-self:center">
+									<p>名字</p> 
+								</div>
+								<div class="col-5">
+									<input type="text" name="Account" id="name" value="" />
+								</div>
+								<div class="col-4">
+
+								</div>
+								<br>
+								<div class="col-2">
+
+								</div>
+								<div class="col-1" style="align-self:center" >
+									<p>電子郵件</p> 
+								</div>
+								<div class="col-5">
+									<input type="text" name="Account" id="name" value="" />
+								</div>
+								<div class="col-4">
+
+								</div>
+								<br>
+								<div class="col-2">
+
+								</div>
+								<div class="col-1" style="align-self:center">
+									<p>電話號碼</p> 
+								</div>
+								<div class="col-5">
+									<input type="text" name="Account" id="name" value="" />
+								</div>
+								<div class="col-4">
+
+								</div>
+								<br>
+								<div class="col-3">
+
+								</div>
+								<div class="col-5">
+									<ul class="actions special">
+										<li><input type="submit" value="Register" /></li>
+									</ul>
+								</div>
+								<div class="col-4">
+
 								</div>
 							</div>
-								<ul class="actions special">
-									<li><input type="submit" value="Login" /></li>
-								</ul>
 								
-							</div>
 						</form>
 					</div>
 				</section>
