search box not alredy

--- a/project/home.html
+++ b/project/home.html
@@ -10,12 +10,12 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1><a href="index.html">NTUT Online Book Store</a></h1>
+					<img src="images/Logo.jpg" alt="NTUT Online Book Store Logo">
 					<nav id="nav">
 						<ul>
-							<li><a href="index.html">Home</a></li>
+							<li><a href="home.html">HOME</a></li>
 							<li>
-								<a href="#" class="icon solid fa-angle-down">Layouts</a>
+								<a href="#" class="icon solid fa-angle-down">PERSONAL INFO</a>
 								<ul>
 									<li><a href="generic.html">Generic</a></li>
 										<ul>
@@ -28,19 +28,20 @@
 									<li><a href="elements.html">Elements</a></li>
 								</ul>
 							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
+							<li><a href="#" class="button">LOGOUT</a></li>
 						</ul>
 					</nav>
 				</header>
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>Alpha</h2>
-					<p>Another fine responsive site template freebie by HTML5 UP.</p>
-					<ul class="actions special">
-						<li><a href="#" class="button primary">Sign Up</a></li>
-						<li><a href="#" class="button">Learn More</a></li>
-					</ul>
+					<h2>北科網路書店</h2>
+					<div class="search-box">
+						<div class="container1">
+							<span class="icon"><i class="fa fa-search"></i></span>
+      						<input type="search" id="search"/>
+						</div>
+					</div>
 				</section>
 
 			<!-- Main -->
