--- a/project/home.html
+++ b/project/home.html
@@ -17,15 +17,15 @@
 							<li>
 								<a href="#" class="icon solid fa-angle-down">PERSONAL INFO</a>
 								<ul>
-									<li><a href="generic.html">Generic</a></li>
+									<li><a href="generic.html">SHELVES</a></li>
 										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
+											<li><a href="#">編輯書籍資訊</a></li>
+											<li><a href="#">上下架書籍</a></li>
 											<li><a href="#">Option Three</a></li>
 											<li><a href="#">Option Four</a></li>
 										</ul>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
+									<li><a href="contact.html">購物車</a></li>
+									<li><a href="elements.html">個人資料</a></li>
 								</ul>
 							</li>
 							<li><a href="#" class="button">LOGOUT</a></li>
@@ -35,56 +35,16 @@
 
 			<!-- Banner -->
 				<section id="banner">
-					<h2>北科網路書店</h2>
+					<h2 style="margin: 0px 40px;">北科網路書店</h2>
 					<div class="search-box">
 						<div class="container1">
-							<span class="icon"><i class="fa fa-search"></i></span>
-      						<input type="search" id="search"/>
+							<span class="search-icon"><i class="fa fa-search"></i></span>
+      						<input type="search" id="search" style="border: none; border-radius: 10px; width: 350px;"/>
 						</div>
 					</div>
 				</section>
 
 			<!-- Main -->
-				<section id="main" class="container">
-
-					<section class="box special">
-						<header class="major">
-							<h2>Introducing the ultimate mobile app
-							<br />
-							for doing stuff with your phone</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
-						</header>
-						<span class="image featured"><img src="images/pic01.jpg" alt="" /></span>
-					</section>
-
-					<section class="box special features">
-						<div class="features-row">
-							<section>
-								<span class="icon solid major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-							<section>
-								<span class="icon solid major fa-chart-area accent3"></span>
-								<h3>Ipsum dolor</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div>
-						<div class="features-row">
-							<section>
-								<span class="icon solid major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-							<section>
-								<span class="icon solid major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-							</section>
-						</div>
-					</section>
-
 					<div class="row">
 						<div class="col-6 col-12-narrower">
 
