--- a/project/shelves.html
+++ b/project/shelves.html
@@ -69,7 +69,7 @@
 								<td>小妹</td>
 								<td>OuO</td>
 								<td>222</td>
-								<td>刪除</td>
+								<td>耶嘿嘿</td>
 								<td><input type="checkbox" name="vehicle3" value="Boat" checked></td>
 							</tr>		
 						</table>
