差圖片問題及後端

--- a/project/home.html
+++ b/project/home.html
@@ -39,37 +39,79 @@
 					<div class="search-box">
 						<div class="container1">
 							<span class="search-icon"><i class="fa fa-search"></i></span>
-      						<input type="search" id="search" style="border: none; border-radius: 10px; width: 350px;"/>
+      						<input type="search" id="search" style="border: none; border-radius: 10px; width: 350px; "/>
 						</div>
 					</div>
 				</section>
 
 			<!-- Main -->
-					<div class="row">
-						<div class="col-6 col-12-narrower">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/pic02.jpg" alt="" /></span>
-								<h3>Sed lorem adipiscing</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
+					<div class="row" style="padding: 20px 20px;">
+						<div class="col-2">
+							<p style="margin: 0; color: #e89980; font-size: 20px;">TYPE</p>
+							<ul style="list-style-type: none;">
+								<li><a href="#">總類</a></li>
+								<li><a href="#">哲學類</a></li>
+								<li><a href="#">宗教類</a></li>
+								<li><a href="#">科學類</a></li>
+								<li><a href="#">應用科學類</a></li>
+								<li><a href="#">社會科學類</a></li>
+								<li><a href="#">史地類</a></li>
+								<li><a href="#">世界史地類</a></li>
+								<li><a href="#">語言文學類</a></li>
+								<li><a href="#">藝術類</a></li>
+							</ul>
 						</div>
-						<div class="col-6 col-12-narrower">
-
-							<section class="box special">
-								<span class="image featured"><img src="images/pic03.jpg" alt="" /></span>
-								<h3>Accumsan integer</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
-								<ul class="actions special">
-									<li><a href="#" class="button alt">Learn More</a></li>
-								</ul>
-							</section>
-
+						<div class="col-10">
+							<div class="row">
+								<div class="col-4 col-12-narrower">
+									<section class="box special">
+										<span class="image featured"><img src="images/book1.jpg" alt="" /></span>
+										<h3>Sed lorem adipiscing</h3>
+										<ul style="list-style-type: none;">
+											<li><p style="margin: 0;">作者: </p></li>
+											<li><p style="margin: 0;">賣家: </p style="margin: 0;"></li>
+											<li><p style="margin: 0;">售價: </p style="margin: 0;"></li>
+											<li><p style="margin: 0;">Type: </p style="margin: 0;"></li>
+										</ul>
+										<ul class="actions special">
+											<li><a href="#" class="button alt">Learn More</a></li>
+										</ul>
+									</section>
+								</div>
+								<div class="col-4 col-12-narrower">
+									<section class="box special">
+										<span class="image featured"><img src="images/book2.jpg" alt="" /></span>
+										<h3>Accumsan integer</h3>
+										<ul style="list-style-type: none;">
+											<li><p style="margin: 0;">作者: </p></li>
+											<li><p style="margin: 0;">賣家: </p style="margin: 0;"></li>
+											<li><p style="margin: 0;">售價: </p style="margin: 0;"></li>
+											<li><p style="margin: 0;">Type: </p style="margin: 0;"></li>
+										</ul>
+										<ul class="actions special">
+											<li><a href="#" class="button alt">Learn More</a></li>
+										</ul>
+									</section>
+								</div>
+								<div class="col-4 col-12-narrower">
+									<section class="box special">
+										<span class="image featured"><img src="images/book1.jpg" alt="" /></span>
+										<h3>Accumsan integer</h3>
+										<ul style="list-style-type: none;">
+											<li><p style="margin: 0;">作者: </p></li>
+											<li><p style="margin: 0;">賣家: </p style="margin: 0;"></li>
+											<li><p style="margin: 0;">售價: </p style="margin: 0;"></li>
+											<li><p style="margin: 0;">Type: </p style="margin: 0;"></li>
+										</ul>
+										<ul class="actions special">
+											<li><a href="#" class="button alt">Learn More</a></li>
+										</ul>
+									</section>
+								</div>
+							</div>
 						</div>
+						
+						
 					</div>
 
 				</section>
