Finish! This will show after sign in.

--- a/project/home.html
+++ b/project/home.html
@@ -47,18 +47,18 @@
 			<!-- Main -->
 					<div class="row" style="padding: 20px 20px;">
 						<div class="col-2">
-							<p style="margin: 0; color: #e89980; font-size: 20px;">TYPE</p>
+							<p style="margin: 0; color: #4b4b49; font-size: 30px; font-weight: bold; padding-left: 16px; padding-bottom: 10px;">TYPE</p>
 							<ul style="list-style-type: none;">
-								<li><a href="#">總類</a></li>
-								<li><a href="#">哲學類</a></li>
-								<li><a href="#">宗教類</a></li>
-								<li><a href="#">科學類</a></li>
-								<li><a href="#">應用科學類</a></li>
-								<li><a href="#">社會科學類</a></li>
-								<li><a href="#">史地類</a></li>
-								<li><a href="#">世界史地類</a></li>
-								<li><a href="#">語言文學類</a></li>
-								<li><a href="#">藝術類</a></li>
+								<li style="padding: 0;"><a href="#">總類</a></li>
+								<li style="padding: 0;"><a href="#">哲學類</a></li>
+								<li style="padding: 0;"><a href="#">宗教類</a></li style="padding: 0;">
+								<li style="padding: 0;"><a href="#">科學類</a></li style="padding: 0;">
+								<li style="padding: 0;"><a href="#">應用科學類</a></li style="padding: 0;">
+								<li style="padding: 0;"><a href="#">社會科學類</a></li style="padding: 0;">
+								<li style="padding: 0;"><a href="#">史地類</a></li style="padding: 0;">
+								<li style="padding: 0;"><a href="#">世界史地類</a></li style="padding: 0;">
+								<li style="padding: 0;"><a href="#">語言文學類</a></li style="padding: 0;">
+								<li style="padding: 0;"><a href="#">藝術類</a></li style="padding: 0;">
 							</ul>
 						</div>
 						<div class="col-10">
@@ -66,45 +66,48 @@
 								<div class="col-4 col-12-narrower">
 									<section class="box special">
 										<span class="image featured"><img src="images/book1.jpg" alt="" /></span>
-										<h3>Sed lorem adipiscing</h3>
+										<h3 class="book title">Lineaar Algebra</h3>
 										<ul style="list-style-type: none;">
-											<li><p style="margin: 0;">作者: </p></li>
-											<li><p style="margin: 0;">賣家: </p style="margin: 0;"></li>
-											<li><p style="margin: 0;">售價: </p style="margin: 0;"></li>
-											<li><p style="margin: 0;">Type: </p style="margin: 0;"></li>
+											<li><p style="margin: 0; text-align:left;">作者: </p></li>
+											<li><p style="margin: 0; text-align:left;">賣家: </p></li>
+											<li><p style="margin: 0; text-align:left;">售價: </p></li>
+											<li><p style="margin: 0; text-align:left;">TYPE: </p></li>
 										</ul>
 										<ul class="actions special">
-											<li><a href="#" class="button alt">Learn More</a></li>
+											<li><a href="#" class="button alt">瞭解詳情</a></li>
+											<li><a href="#" class="button alt">加入購物車</a></li>
 										</ul>
 									</section>
 								</div>
 								<div class="col-4 col-12-narrower">
 									<section class="box special">
 										<span class="image featured"><img src="images/book2.jpg" alt="" /></span>
-										<h3>Accumsan integer</h3>
+										<h3 class="book title">Essential Calculus</h3 class="book title">
 										<ul style="list-style-type: none;">
-											<li><p style="margin: 0;">作者: </p></li>
-											<li><p style="margin: 0;">賣家: </p style="margin: 0;"></li>
-											<li><p style="margin: 0;">售價: </p style="margin: 0;"></li>
-											<li><p style="margin: 0;">Type: </p style="margin: 0;"></li>
+											<li><p style="margin: 0; text-align:left;">作者: </p></li>
+											<li><p style="margin: 0; text-align:left;">賣家: </p></li>
+											<li><p style="margin: 0; text-align:left;">售價: </p></li>
+											<li><p style="margin: 0; text-align:left;">TYPE: </p></li>
 										</ul>
 										<ul class="actions special">
-											<li><a href="#" class="button alt">Learn More</a></li>
+											<li><a href="#" class="button alt">瞭解詳情</a></li>
+											<li><a href="#" class="button alt">加入購物車</a></li>
 										</ul>
 									</section>
 								</div>
 								<div class="col-4 col-12-narrower">
 									<section class="box special">
-										<span class="image featured"><img src="images/book1.jpg" alt="" /></span>
-										<h3>Accumsan integer</h3>
+										<span class="image featured"><img src="images/book3.jpg" alt="" /></span>
+										<h3 class="book title">Economics</h3 class="book title">
 										<ul style="list-style-type: none;">
-											<li><p style="margin: 0;">作者: </p></li>
-											<li><p style="margin: 0;">賣家: </p style="margin: 0;"></li>
-											<li><p style="margin: 0;">售價: </p style="margin: 0;"></li>
-											<li><p style="margin: 0;">Type: </p style="margin: 0;"></li>
+											<li><p style="margin: 0; text-align:left;">作者: </p></li>
+											<li><p style="margin: 0; text-align:left;">賣家: </p></li>
+											<li><p style="margin: 0; text-align:left;">售價: </p></li>
+											<li><p style="margin: 0; text-align:left;">TYPE: </p></li>
 										</ul>
 										<ul class="actions special">
-											<li><a href="#" class="button alt">Learn More</a></li>
+											<li><a href="#" class="button alt">瞭解詳情</a></li>
+											<li><a href="#" class="button alt">加入購物車</a></li>
 										</ul>
 									</section>
 								</div>
