--- a/project/homeBeforeSign.html
+++ b/project/homeBeforeSign.html
@@ -14,19 +14,8 @@
 					<img src="images/Logo.jpg" alt="NTUT Online Book Store Logo">
 					<nav id="nav">
 						<ul>
-							<li><a href="home.html">HOME</a></li>
-							<li>
-								<a href="#" class="icon solid fa-angle-down">PERSONAL INFO</a>
-								<ul>
-									<li><a href="#">SHELVES</a></li>
-										<ul>
-											<li><a href="#">編輯書籍資訊</a></li>
-											<li><a href="#">上下架書籍</a></li>
-										</ul>
-									<li><a href="#">購物車</a></li>
-									<li><a href="#">個人資料</a></li>
-								</ul>
-							</li>
+							<li><a href="homeBeforeSign.html">HOME</a></li>
+							<li><a href="#">REGISTER</a></li>
 							<li><a href="#" class="button">LOGOUT</a></li>
 						</ul>
 					</nav>
